change faizal into faiz al

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Faizal Market Online</title>
+    <title>Faiz Market Online</title>
     <meta name="description" content="A mobile-first web app for ordering from the mini market, with user-friendly quick login and local storage." />
     <link rel="icon" type="image/svg+xml" href="/placeholder.svg" />
 
-    <meta property="og:title" content="Faizal Market Online" />
+    <meta property="og:title" content="Faiz Market Online" />
     <meta property="og:description" content="A mobile-first web app for ordering from the mini market, with user-friendly quick login and local storage." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/og.jpg" />
